--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2021,6 +2021,21 @@ a {
   position: absolute;
   top: 0;
 }
+.cid-ujcCf7Bg8F {
+  background-image: url("../../../assets/images/background9.jpg");
+}
+.cid-ujcCf7Bg8F .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-ujcCf7Bg8F .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
 .cid-uja7E7eZW8 {
   padding-top: 6rem;
   padding-bottom: 6rem;
